added some data validation for city and country

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <form>
                 <label for="city">City:</label>
                 <input type="text" id="city" name="city">
-                <label for="country">Country:</label>
+                <label for="country">Country: (optional)</label>
                 <input type="text" id="country" name="country">
                 <br>
                 <input id = submit-button type="submit" value="Search">
