displays recentSearch history and redisplays the data when user selects

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <br>
                 <input id=submit-button type="submit" value="Search">
             </form>
-            <ol id=recent-searches class=recentSearches></ol>
+            <ul id=recent-searches class=recentSearches></ul>
         </div>
         <div class="right-column">
             <p id="current-data">
