--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <h2>
                     <li id=current-city></li>
                 </h2>
+                <image id=current-icon></image>
                 <li id=current-temp></li>
                 <li id=current-wind></li>
                 <li id=current-humidity></li>
@@ -42,7 +43,7 @@
                 <div class="column-one" id = "forecast-0">
                     <ul>
                         <li id = "date-0"></li>
-                        <li id = "icon-0"></li>
+                        <image id = "icon-0"></image>
                         <li id = "temp-0"></li>
                         <li id = "wind-0"></li>
                         <li id = "humidity-0"></li>
@@ -51,7 +52,7 @@
                 <div class="column-two" id = forecast-1>
                     <ul>
                         <li id = "date-1"></li>
-                        <li id = "icon-1"></li>
+                        <image id = "icon-1"></image>
                         <li id = "temp-1"></li>
                         <li id = "wind-1"></li>
                         <li id = "humidity-1"></li>
@@ -60,7 +61,7 @@
                 <div class="column-three" id = forecast-2>
                     <ul>
                         <li id = "date-2"></li>
-                        <li id = "icon-2"></li>
+                        <image id = "icon-2"></image>
                         <li id = "temp-2"></li>
                         <li id = "wind-2"></li>
                         <li id = "humidity-2"></li>
@@ -69,7 +70,7 @@
                 <div class="column-four" id = forecast-3>
                     <ul>
                         <li id = "date-3"></li>
-                        <li id = "icon-3"></li>
+                        <image id = "icon-3"></image>
                         <li id = "temp-3"></li>
                         <li id = "wind-3"></li>
                         <li id = "humidity-3"></li>
@@ -78,7 +79,7 @@
                 <div class="column-five" id = forecast-4>
                     <ul>
                         <li id = "date-4"></li>
-                        <li id = "icon-4"></li>
+                        <image id = "icon-4"></image>
                         <li id = "temp-4"></li>
                         <li id = "wind-4"></li>
                         <li id = "humidity-4"></li>
